# alchemy-example

./: .env.example  Dockerfile  compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2d79417fccdc_init.py
src/: app.py  settings.py
src/books/: depends.py  erros.py  schemas.py  service.py  views.py
src/core/: depends.py  pagination.py  schema.py  session.py  sevice.py
src/core/db/: base.py  mixins.py  types.py
src/core/enums/: comparison_operator.py  publication_type.py
src/database/: __init__.py  author.py  category.py  category__publication.py  favorite_publications.py  user.py
src/database/publications/: base.py  book.py  magazine.py
